--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
 
       <!-- Bootstrap core CSS -->
       <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-      <link href="http://fonts.googleapis.com/css?family=Clicker+Script" rel='stylesheet'  type='text/css'>
+      <link href="https://fonts.googleapis.com/css?family=Clicker+Script" rel='stylesheet'  type='text/css'>
       {{content-for "head-footer"}}
    </head>
    <body>
